--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Stats</title>
   </head>
   <body>
-    <h1>Look at the console :)</h1>
-    <script src="index.js"></script>
+    <h1>Look at the console :</h1>
+    <script src="script.js"></script>
   </body>
 </html>
